--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -388,11 +388,11 @@ reaches zero, any value you have selected will be submitted.  <strong>The defaul
             model.harvestDecision = ko.observable(0);
             model.numberOfTreesPerRow = ko.observable(10);
             model.isResourceEmpty = ko.computed(function() {
-                return model.resourceLevel() == 0;
+                return model.resourceLevel == 0;
             })
             model.resourcesToDisplay = ko.computed(function() {
-                if (model.resourceLevel() > 0) {
-                    return Math.min(model.resourceLevel(), model.maximumResourcesToDisplay());
+                if (model.resourceLevel > 0) {
+                    return Math.min(model.resourceLevel, model.maximumResourcesToDisplay());
                 }
                 return 0;
             });
