--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -79,11 +79,14 @@
                 <span data-bind='text: $data'></span>
             </div>
         </div>
-        <h4>Notes</h4>
-        <form id="experimenterLogForm" class='form-horizontal'>
-            <div class='controls-row'>
+        {% comment %}
+        FIXME: might want to put this functionality into each round data object
+        {% endcomment %}
+        <h4>Experimenter Notes (<span data-bind='text: roundSequenceLabel'></span>)</h4>
+        <form id="experimenterNotesForm" class='form-inline'>
+            <div class='controls'>
                 <textarea class='input-block-level' id='experimenterNotes' data-bind='text: experimenterNotes' placeholder="Experimenter notes to be stored with this round's data" rows="3" id='experimenterNote'></textarea>
-                <button id='submitExperimenterNotesButton' class='btn btn-primary' type='submit' data-bind='click: submitExperimenterNotes'>Save</button>
+                <button id='submitExperimenterNotesButton' class='btn btn-primary' type='submit' data-bind='click: saveExperimenterNotes'>Save</button>
             </div>
         </form>
     </div>
@@ -99,6 +102,11 @@
         </div>
         <div data-bind='attr: { id: roundDataId }' class='accordion-body collapse'>
             <div class='accordion-inner'>
+                <div data-bind='if: experimenterNotes'>
+                    <h4>Experimenter Notes</h4>
+                    <div class='alert alert-message' data-bind='text: experimenterNotes'>
+                    </div>
+                </div>
                 <table class='table table-striped table-bordered'>
                     <caption>Group data</caption>
                     <thead>
@@ -161,14 +169,14 @@
 {% include "includes/experimenter.events.html" %}
 {% include "includes/sockjs.html" %}
 <script type='text/javascript'>
-    var experimentModelJson = $.parseJSON("{{ experiment.to_json|escapejs }}");
+    var experimentModelJson = $.parseJSON("{{ experimentModelJson|escapejs }}");
     $(function() {
         function ExperimentModel(experimentModelJson) {
             var self = this;
             var model = ko.mapping.fromJS(experimentModelJson);
-            model.submitExperimenterNotes = function(localModel, evt) {
+            model.saveExperimenterNotes = function(localModel, evt) {
                 var notes = $('#experimenterNotes').val();
-                Dajaxice.vcweb.core.submit_experimenter_notes(function(data) {
+                Dajaxice.vcweb.core.save_experimenter_notes(function(data) {
                     if (data.success) {
                         $('#submitExperimenterNotesButton').val('Saved!');
                     }
