sendUpdateEvent needs to be embedded in the callback function.  JS needs some refactoring, looks like we can merge the various confirmAction click bindings into a single confirmExperimentAction click binding and parameterize them at the DOM data-bind site
create_round_data now get_or_creates participant ready parameters to avoid creating duplicates

--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -500,6 +500,7 @@ reaches zero, any value you have selected will be submitted.  <strong>The defaul
                     case 'update':
                         $('#progress-modal').modal('show');
                         experimentModel.update();
+                        break;
                     default:
                         console.debug("unhandled json message:" + json);
                         break;
